--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -1,5 +1,5 @@
 <p-dialog header="Thông tin cá nhân" [(visible)]="visible" [style]="{width: '60vw', height: '100vw'}">
-  <div class="row">
+  <div class="row" *ngIf="!isUpdate && this.currentUser">
     <div class="col-md-7">
       <div>
         <div>
@@ -61,5 +61,73 @@
 
     </div>
   </div>
+  <div class="row" *ngIf="isUpdate && this.currentUser" [formGroup]="form">
+    <div class="col-md-7">
+      <div>
+        <div>
+          <label>Email</label>
+        </div>
+        <div>
+          <input type="text" value="{{this.currentUser.email}}" class="form-control" readonly>
 
+        </div>
+
+        <div>
+          <label>Tên</label>
+        </div>
+        <div>
+          <input type="text" formControlName = 'fullName' class="form-control">
+        </div>
+
+        <div>
+          <label>Số điện thoại</label>
+        </div>
+        <div>
+          <input type="text" formControlName = 'phoneNumber' class="form-control">
+        </div>
+
+        <div>
+          <label>Giới tính</label>
+        </div>
+        <div>
+          <p-dropdown [options]="genders" formControlName = "gender" >
+
+          </p-dropdown>
+        </div>
+
+        <div>
+          <label>Năm sinh</label>
+        </div>
+        <div>
+          <input type="date" formControlName = 'dob' class="form-control">
+        </div>
+
+      </div>
+    </div>
+    <div class="col-md-5">
+      <div>
+        <div>
+          <label>Đơn vị</label>
+        </div>
+        <div>
+          <p>{{this.currentUser.school?.schoolName}}</p>
+        </div>
+      </div>
+      <div>
+        <div>
+          <label>Chức vụ</label>
+        </div>
+        <div>
+          <p> <ng-container *ngFor="let role of this.currentUser.accountRoles; let last = last">
+            {{ role.role?.roleName }}{{ last ? '' : ';' }}
+          </ng-container></p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+<button class="btn btn-primary"
+        (click)="onUpdate()"
+>Cập nhật</button>
+<button class="btn btn-primary">Thay mật khẩu</button>
 </p-dialog>
