--- a/src/app/features/post-login/user/user-create/user-create.component.html
+++ b/src/app/features/post-login/user/user-create/user-create.component.html
@@ -1,182 +1,118 @@
-<div class="m-3">
-  <h2>Tạo người dùng</h2>
-</div>
 <p-toast position="top-right" key="error"></p-toast>
 <p-toast position="center" key="confirm"></p-toast>
 <p-confirmDialog key="popUpConfirm" [style]="{width: '50vw'}"></p-confirmDialog>
-
-<form [formGroup]="createUserForm" >
+<form class="container-fluid" [formGroup]="createUserForm">
+  <h5 class="mat-headline-5 fw-medium">Tạo người dùng</h5>
   <div class="row">
-    <div class="col-md-6">
-      <div class="row">
-        <div class="col-md-10">
-          <div class="m-3">
-            <label><span class="p-error">*</span> Tên <span class="p-error">(bắt buộc)</span></label>
-          </div>
-          <div class="m-3">
-            <input
-              class="form-control"
-              type="text"
-              formControlName='fullName'
-              placeholder="(VD): Nguyen Van A"
-            >
-            <span *ngIf="  (this.createUserForm.get('fullName')?.hasError('required') || this.createUserForm.get('fullName')?.hasError('whitespace'))   &&
+    <div class="col-md-6 col-sm-12">
+      <div class="mb-2">
+        <label class="fw-medium mb-1">Tên<span class="p-error">*</span></label>
+        <input
+          class="form-control"
+          type="text"
+          formControlName='fullName'
+          placeholder="(VD): Nguyen Van A"
+        >
+        <span *ngIf="  (this.createUserForm.get('fullName')?.hasError('required') || this.createUserForm.get('fullName')?.hasError('whitespace'))   &&
             ((this.createUserForm.get('fullName')?.dirty ?? false) ||
                 (this.createUserForm.get('fullName')?.touched ?? false) || this.isSubmitted)" class="p-error">Không được để trống mục này</span>
-
-          </div>
-        </div>
       </div>
-      <div class="row">
-        <div class="col-md-10">
-          <div class="m-3">
-            <label>Giới tính</label>
-
-          </div>
-          <div class="m-3">
-            <p-dropdown [options]="genders" formControlName = "gender">
-
-            </p-dropdown>
-
-          </div>
-
-        </div>
+      <div class="mb-2">
+        <label class="fw-medium mb-1">Email<span class="p-error">*</span></label>
+        <input
+          class="form-control"
+          type="text"
+          formControlName='email'
+          placeholder="(VD): nguyenVanA@gmail.com"
+        >
+        <span *ngIf="isBlank('email')" class="p-error">Không được để trống mục này</span>
+        <span class="p-error"
+              *ngIf="createUserForm.get('email')?.hasError('email')">Sai định dạng gmail</span>
+        <span class="p-error"
+              *ngIf="createUserForm.get('email')?.hasError('notUnique')">
+              Email này đã tồn tại vui lòng chọn email khác
+        </span>
       </div>
-      <div class="row">
-        <div class="col-md-6">
-          <div class="m-3">
-            <label>Ngày sinh</label>
-          </div>
-          <div class="m-3">
-            <input
-              class="form-control"
-              type="date"
-              formControlName='dob'
-            >
+      <div class="col-md-6 col-sm-12 mb-2">
+        <label class="w-100 fw-medium mb-1">Chức vụ<span class="p-error">*</span></label>
+        <p-dropdown [options]="roles"
+                    optionLabel="roleName" [filter]="true"
+                    filterBy="roleName"
+                    [(ngModel)]="selectedRole"
+                    [ngModelOptions]="{standalone: true}"
+                    [showClear]="true"
+                    placeholder="Chọn 1 vai trò"
+                    (onChange)="patchRoleId()"
+        >
+          <ng-template let-role pTemplate="item">
+            <div>{{ role.roleName }}</div>
+          </ng-template>
+        </p-dropdown>
+        <div>
             <span class="p-error"
-                  *ngIf="isError('dob', 'invalidDate')">
-      Ngày sinh không thể là tương lai
-    </span>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6">
-          <div class="m-3">
-            <label>Số điện thoại</label>
-          </div>
-          <div class="m-3">
-            <input
-              class="form-control"
-              type="text"
-              formControlName='phoneNumber'
-              placeholder="(VD): 0123456789"
-            >
-            <span class="p-error"
-                  *ngIf="isError('phoneNumber', 'pattern')">
-      Sai định dạng số điện thoại
-    </span>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6">
-      <div class="row">
-        <div class="col-md-10">
-          <div class="m-3">
-            <label><span class="p-error">*</span> Email <span class="p-error">(bắt buộc)</span></label>
-          </div>
-          <div class="m-3">
-            <input
-              class="form-control"
-              type="text"
-              formControlName='email'
-              placeholder="(VD): nguyenVanA@gmail.com"
-            >
-            <span *ngIf="isBlank('email')" class="p-error">Không được để trống mục này</span>
-            <span class="p-error"
-                  *ngIf="createUserForm.get('email')?.hasError('email')">Sai định dạng gmail</span>
-            <span class="p-error"
-                  *ngIf="createUserForm.get('email')?.hasError('notUnique')">
-      Email này đã tồn tại vui lòng chọn email khác
-    </span>
-          </div>
-        </div>
-
-        <div class="row" *ngIf="schools">
-          <div class="col-md-10">
-            <div class="m-3">
-              <label>Đơn vị</label>
-            </div>
-            <div class="m-3">
-              <p-dropdown [options]="schools"
-                          optionLabel="schoolName" [filter]="true"
-                          filterBy="schoolName"
-                          [(ngModel)]="selectedSchool"
-                          [ngModelOptions]="{standalone: true}"
-                          placeholder="Chọn 1 đơn vị"
-                          (onChange)="[patchSchoolId()]"
-              >
-
-                <ng-template let-school pTemplate="item">
-                  <div class="flex align-items-center gap-2">
-                    <div>{{ school.schoolName }}</div>
-                  </div>
-                </ng-template>
-              </p-dropdown>
-              <div>
-              </div>
-
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-10">
-            <div class="m-3">
-              <label><span class="p-error">*</span> Chức vụ <span class="p-error">(bắt buộc)</span></label>
-            </div>
-            <div class="m-3">
-              <p-dropdown [options]="roles"
-                          optionLabel="roleName" [filter]="true"
-                          filterBy="roleName"
-                          [(ngModel)]="selectedRole"
-                          [ngModelOptions]="{standalone: true}"
-                          [showClear]="true"
-                          placeholder="Chọn 1 vai trò"
-                          (onChange)="patchRoleId()"
-              >
-
-                <ng-template let-role pTemplate="item">
-                  <div class="flex align-items-center gap-2">
-                    <div>{{ role.roleName }}</div>
-                  </div>
-                </ng-template>
-              </p-dropdown>
-              <div>
-                 <span class="p-error"
-                       *ngIf="createUserForm.get('roleId')?.hasError('min')  &&
+                  *ngIf="createUserForm.get('roleId')?.hasError('min')  &&
             ((this.createUserForm.get('roleId')?.dirty ?? false) ||
                 (this.createUserForm.get('roleId')?.touched ?? false) || this.isSubmitted)">
-      Không được để trống mục này
-    </span>
-              </div>
-
-            </div>
-          </div>
+              Không được để trống mục này
+            </span>
+        </div>
       </div>
-
+      <div class="col-md-6 col-sm-12 mb-2">
+        <label class="fw-medium mb-1">Số điện thoại</label>
+        <input
+          class="form-control"
+          type="text"
+          formControlName='phoneNumber'
+          placeholder="(VD): 0123456789"
+        >
+        <span class="p-error"
+              *ngIf="isError('phoneNumber', 'pattern')">
+                Sai định dạng số điện thoại
+        </span>
+      </div>
+      <div *ngIf="schools" class="col-md-6 col-sm-12 mb-2">
+        <label class="fw-medium mb-1">Đơn vị</label>
+        <p-dropdown [options]="schools"
+                    optionLabel="schoolName" [filter]="true"
+                    filterBy="schoolName"
+                    [(ngModel)]="selectedSchool"
+                    [ngModelOptions]="{standalone: true}"
+                    placeholder="Chọn 1 đơn vị"
+                    (onChange)="[patchSchoolId()]"
+        >
+          <ng-template let-school pTemplate="item">
+            <div class="flex align-items-center gap-2">
+              <div>{{ school.schoolName }}</div>
+            </div>
+          </ng-template>
+        </p-dropdown>
+      </div>
+      <div class="col-md-6 col-sm-12 mb-2">
+        <label class="fw-medium mb-1">Ngày sinh</label>
+        <input
+          class="form-control"
+          type="date"
+          formControlName='dob'
+        >
+        <span class="p-error"
+              *ngIf="isError('dob', 'invalidDate')">
+              Ngày sinh không thể là tương lai
+        </span>
+      </div>
+      <div class="col-md-3 col-sm-6 mb-2">
+        <label class="fw-medium mb-1">Giới tính</label>
+        <div>
+          <p-dropdown [options]="genders" formControlName="gender">
+          </p-dropdown>
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-6">
+        <button (click)="confirm()" type="submit" class="mt-2" pButton>Tạo người dùng</button>
+      </div>
     </div>
   </div>
-  </div>
-  <div class="m-3">
-    <button (click)="confirm()" type="submit" class="btn btn-primary">Tạo</button>
-  </div>
+
 </form>
-<!--<div class="overlay" *ngIf="isLoading">-->
-<!--  <div class="spinner-container">-->
-<!--    <div class="spinner-border" role="status"></div>-->
-<!--  </div>-->
-<!--</div>-->
 <app-loading-complete-dialog
   [visible]="isLoading"
   [completed]="submitCompleted"
