--- a/src/app/features/post-login/user/user-detail/user-detail.component.scss
+++ b/src/app/features/post-login/user/user-detail/user-detail.component.scss
@@ -1,4 +1,33 @@
+@import "../../../../../assets/scss/base";
 
-.font-weight-bold {
-  font-weight: bold;
+*{
+  font-size: 16px;
+}
+
+.p-inputtext,
+.p-inputtextarea,
+.p-dropdown {
+  border-radius: 8px;
+}
+
+:host ::ng-deep {
+  .p-button {
+    background-color: $primary;
+    border-radius: 8px;
+    border: solid 1px $primary;
+    transition: all 0.5s ease;
+    &:hover {
+      background-color: $primary-hover;
+      border-color: $primary-hover;
+    }
+  }
+}
+
+::ng-deep .p-dropdown{
+  width: 100%;
+  border-radius: 8px;
+}
+
+.span-heading-color{
+  color: #616161;
 }
